--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,10 @@
 title: Tanweer Rajwani
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Howdy!
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://tanweer.io/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: tanweerrajwani
+github_username:  antweer
 
 # Build settings
 markdown: kramdown
